api-reference/v2/error-codes.mdx
---
title: 'Error Codes'
description: 'Error codes returned by the CoCart API v2.'
icon: xmark
---

| Code | Status                                      | Response                                                                                                                                                                                                                      |
| ---- | ------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| 401  | `cocart_rest_not_authorized`                | Sorry, you are not authorized.                                                                                                                                                                                                |
| 401  | `cocart_rest_cannot_view`                   | Sorry, you cannot list resources.                                                                                                                                                                                             |
| 500  | `cocart_cart_error`                         | Unable to retrieve cart.                                                                                                                                                                                                      |
| 401  | `cocart_cannot_read_cart`                   | Cannot read cart!                                                                                                                                                                                                             |
| 404  | `cocart_customer_missing`                   | Customer ID is required!                                                                                                                                                                                                      |
| 404  | `cocart_cart_key_missing`                   | Cart Key is required!                                                                                                                                                                                                         |
| 404  | `cocart_cart_in_session_not_valid`          | Cart in session is not valid!                                                                                                                                                                                                 |
| 404  | `cocart_clear_cart_failed`                  | Clearing the cart failed!                                                                                                                                                                                                     |
| 404  | `cocart_product_id_required`                | Product ID number is required!                                                                                                                                                                                                |
| 405  | `cocart_product_id_not_numeric`             | Product ID must be numeric!                                                                                                                                                                                                   |
| 405  | `cocart_quantity_not_numeric`               | Quantity must be numeric!                                                                                                                                                                                                     |
| 405  | `cocart_quantity_invalid_amount`            | Quantity must be a minimum of %s. Or: Quantity must be %s or lower.                                                                                                                                                           |
| 404  | `cocart_product_does_not_exist`             | Warning: This product does not exist!                                                                                                                                                                                         |
| 403  | `cocart_product_sold_individually`          | You cannot add another "%s" to your cart. <i class="label label-info">%s is the product name</i>                                                                                                                              |
| 403  | `cocart_cannot_be_purchased`                | Sorry, this product cannot be purchased.                                                                                                                                                                                      |
| 404  | `cocart_product_out_of_stock`               | You cannot add "%s" to the cart because the product is out of stock. <i class="label label-info">%s is the product name</i>                                                                                                   |
| 403  | `cocart_not_enough_in_stock`                | You cannot add a quantity of %1$s for "%2$s" to the cart because there is not enough stock. - only %3$s remaining! <i class="label label-info">%1$s: quantity requested, %2$s: product name, %3$s: stock remaining.</i>       |
| 403  | `cocart_not_enough_stock_remaining`         | You cannot add that amount to the cart &mdash; we have %1$s in stock and you already have %2$s in your cart.                                                                                                                  |
| 403  | `cocart_not_ok_to_add_item`                 | This item can not be added to the cart.                                                                                                                                                                                       |
| 404  | `cocart_grouped_product_failed`             | Please choose the quantity of items you wish to add to your cart.                                                                                                                                                             |
| 404  | `cocart_grouped_product_empty`              | Please choose a product to add to your cart.                                                                                                                                                                                  |
| 404  | `cocart_add_to_cart_error`                  | Error message from WooCommerce validation.                                                                                                                                                                                    |
| 403  | `cocart_cannot_add_to_cart`                 | You cannot add "%s" to your cart. <i class="label label-info">%s is the product name</i>                                                                                                                                      |
| 403  | `cocart_can_not_remove_item`                | Unable to remove item from cart.                                                                                                                                                                                              |
| 403  | `cocart_can_not_restore_item`               | Unable to restore item to the cart.                                                                                                                                                                                           |
| 403  | `cocart_can_not_update_item`                | Unable to update item quantity in cart.                                                                                                                                                                                       |
| 404  | `cocart_cart_item_key_required`             | Cart item key is required!                                                                                                                                                                                                    |
| 404  | `cocart_no_items`                           | No items in cart.                                                                                                                                                                                                             |
| 404  | `cocart_item_not_in_cart`                   | Item specified does not exist in cart.                                                                                                                                                                                        |
| 403  | `cocart_cannot_add_product_type_to_cart`    | You cannot add "%1$s" to your cart as it is an "%2$s" product. <i class="label label-info">%1$s: product name, %2$s: product type</i>                                                                                         |
| 400  | `cocart_invalid_variation_data`             | Invalid value posted for %1$s. Allowed values: %2$s <i class="label label-info">%1$s: Attribute name, %2$s: Allowed values</i>                                                                                                |
| 400  | `cocart_missing_variation_data`             | Missing variation data for variable product. %s is a required field. <i class="label label-info">%s: Attribute name.</i>                                                                                                      |
| 400  | `cocart_missing_variation_data`             | Missing variation data for variable product. %s are required fields. <i class="label label-info">%s: Attribute name.</i>                                                                                                      |
| 400  | `cocart_no_variation_found`                 | No matching variation found.                                                                                                                                                                                                  |
| 403  | `cocart_cart_invalid_parent_product`        | This product cannot be added to the cart.                                                                                                                                                                                     |
| 404  | `cocart_product_failed_validation`          | Product did not pass validation!                                                                                                                                                                                              |
| 403  | `cocart_can_not_increase_quantity`          | You can only have 1 %s in your cart. <i class="label label-info">%s is the product name</i>                                                                                                                                   |
| 404  | `cocart_no_carts_in_session`                | No carts in session!                                                                                                                                                                                                          |
| 404  | `cocart_product_invalid_id`                 | Invalid ID.                                                                                                                                                                                                                   |
| 404  | `cocart_unknown_product_id`                 | Product does not exist! Check that you have submitted a product ID or SKU ID correctly for a product that exists.                                                                                                             |
| 404  | `cocart_cart_totals_empty`                  | This cart either has no items or was not calculated.                                                                                                                                                                          |
| 405  | `cocart_item_restored_to_cart`              | Item has already been restored to cart or does not exist in cart.                                                                                                                                                             |
| 404  | `cocart_update_cart_namespace_error`        | You must provide a namespace when extending the cart endpoint. Available namespaces: (%s)                                                                                                                                     |
| 404  | `cocart_update_cart_no_namespace_error`     | There is no such namespace registered: %s.                                                                                                                                                                                    |
| 400  | `cocart_update_cart_invalid_callback_error` | There is no valid callback registered for: %s.                                                                                                                                                                                |
